fix 24720524 & 24744004: change right arrow button toolip to title, change corrlated radio button to toggle, remove tooltip from collapse container

--- a/src/SfxWeb/src/app/modules/event-store/timeline/timeline.component.scss
+++ b/src/SfxWeb/src/app/modules/event-store/timeline/timeline.component.scss
@@ -1,43 +1,3 @@
-.solid-grey {
-    border-radius: 0px !important;
-    border-color: white !important;
-    background-color: rgb(97, 97, 97);
-    border-width: 2px;
-    font-size: unset;
-    line-height: unset;
-
-    &:hover {
-        color: white;
-    }
-}
-
-$border-radius: 5px;
-
-.btn-group {
-  border: 2px solid transparent;
-  border-radius: $border-radius;
-
-  &:focus-within {
-    border: 2px solid var(--accent-lightblue)  !important;
-  }
-
-   label {
-     &:first-child {
-      border-bottom-left-radius: $border-radius !important;
-      border-top-left-radius: $border-radius !important;
-     }
-
-     &:last-child {
-      border-bottom-right-radius: $border-radius !important;
-      border-top-right-radius: $border-radius !important;
-     }
-
-     &.active {
-       background-color: var(--accent-darkblue);;
-     }
-   }
-}
-
 .correlated-icon {
     vertical-align: middle;
     margin-right: 3px;
