--- a/src/SfxWeb/src/app/views/application/create-service/create-service.component.scss
+++ b/src/SfxWeb/src/app/views/application/create-service/create-service.component.scss
@@ -17,3 +17,8 @@ dl {
     }
 }
 
+.radio-btns {
+    display: inline-flex;
+    gap: 5px;
+    margin: 5px;
+}
